Bugfix: alignright / alignleft figures maintains outdated float properties on mobile, when there should not be any floats in that env

--- a/sass/components/_entry-content.scss
+++ b/sass/components/_entry-content.scss
@@ -227,6 +227,7 @@ $content-gutter: $spacing-large;
     max-width: $partial-content-max-width;
     position: relative;
     @media (max-width: $mobile-max) {
+      float: none;
       margin: 0 auto $content-gutter;
       max-width: 100%;
     }
